--- a/launch.html
+++ b/launch.html
@@ -17,7 +17,9 @@
               // launch            - Get the launch context
               // openid & fhirUser - Get the current user
               // patient/*.read    - Read patient data
-              scope: "launch openid fhirUser patient/*.read",
+              scope: "launch openid fhirUser patient/*.*",
+            
+              
 
               // Typically, if your redirectUri points to the root of the current directory
               // (where the launchUri is), you can omit this option because the default value is
